[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "aioartifactory"
dynamic = [
    "version",
    "readme"
]
dependencies = [
    "aiofiles",
    "aiohttp[speedups]",
    "tealogger"
]
requires-python = ">=3.11"
authors = [
    {name = "Yan Kuang"},
]
description = "Asynchronous Input Output (AIO) Artifactory"
keywords = [
    "aioartifactory"
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
    "ruff",
    "twine"
]
test = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/YTKme/aioartifactory"
"Bug Tracker" = "https://github.com/YTKme/aioartifactory/issues"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
packages = [
    "aioartifactory"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {file = "VERSION"}
