[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["aioartifactory"]
module-root = ""

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
# publish-url = "https://upload.pypi.org/legacy"
publish-url = "https://pypi.python.org/pypi"
default = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy"

[project]
name = "aioartifactory"
version = "0.1.23"
description = "Asynchronous Input Output (AIO) Artifactory"
keywords = ["aioartifactory", "artifactory"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"

authors = [{ name = "Yan Kuang", email = "YTKme@Outlook.com" }]
maintainers = [{ name = "Yan Kuang", email = "YTKme@Outlook.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "aiofiles",
    "aiohttp[speedups]",
    "tealogger"
]

[dependency-groups]
develop = [
    "ruff",
    "ty",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "tox",
]

[project.urls]
"Homepage" = "https://github.com/YTKme/aioartifactory"
"Repository" = "https://github.com/YTKme/aioartifactory"
"Bug Tracker" = "https://github.com/YTKme/aioartifactory/issues"
